Bug 465339 - Flatpak Permissions Settings KCM ignores XDG_DATA_HOME env var
Summary: Flatpak Permissions Settings KCM ignores XDG_DATA_HOME env var
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_flatpak (other bugs)
Version First Reported In: 5.26.90
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-05 21:01 UTC by jesse12p+kdebugs
Modified: 2023-02-06 15:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jesse12p+kdebugs 2023-02-05 21:01:12 UTC
SUMMARY

The KCM does not find my flatpak/overrides folder, as I have XDG_DATA_HOME env var set to custom path, and the KCM ignores that env var.

STEPS TO REPRODUCE
1. Set XDG_DATA_HOME env var
2. Make changes in the KCM

OBSERVED RESULT

The KCM looks for and modifies files in $HOME/.local/share/flatpak/overrides

EXPECTED RESULT

The KCM looks for and modifies files in $XDG_DATA_HOME/flatpak/overrides

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-02-05 21:51:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/flatpak-kcm/-/merge_requests/30
Comment 2 Nicolas Fella 2023-02-06 15:00:09 UTC
Git commit 345ac9f47b93aa3109baae507c06a97d4c2e7e43 by Nicolas Fella.
Committed on 06/02/2023 at 14:59.
Pushed by nicolasfella into branch 'master'.

Use QStandardPaths::GenericDataLocation instead of hardcoding .local/share

M  +2    -1    flatpakhelper.cpp

https://invent.kde.org/plasma/flatpak-kcm/commit/345ac9f47b93aa3109baae507c06a97d4c2e7e43
Comment 3 Nicolas Fella 2023-02-06 15:00:42 UTC
Git commit 8606f892f1a605cb97ee3aa676c19e5c6ce21868 by Nicolas Fella.
Committed on 06/02/2023 at 15:00.
Pushed by nicolasfella into branch 'Plasma/5.27'.

Use QStandardPaths::GenericDataLocation instead of hardcoding .local/share
(cherry picked from commit 345ac9f47b93aa3109baae507c06a97d4c2e7e43)

M  +2    -1    flatpakhelper.cpp

https://invent.kde.org/plasma/flatpak-kcm/commit/8606f892f1a605cb97ee3aa676c19e5c6ce21868