Use QStandardPaths::GenericDataLocation instead of hardcoding .local/share

BUG: 465339
(cherry picked from commit 345ac9f47b93aa3109baae507c06a97d4c2e7e43)